[package]
name = "yamusic"
version = "0.1.0"
description = "Yandex Music"
authors = ["smokingplaya"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open"] }
window-shadows = "*"
discord-rich-presence = "0.2.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
